 ! Minor change or bugfix. (don't bother to log typos except between releases.)
 * Change like above, but affects templates.
 & Change that affects a language file. (make two if it affects templates too.)
 + Feature addition or improvement.
 - Feature or option removal.
 % Development flag or note, such as branching.
 
Pretty URLs 1.0 RC5                                                 5  January 2011
================================================================================
 ! Base: Fixed issue if queryless urls are enabled. Pretty urls will now disable them when enabling pretty urls to fix server errors.

Pretty URLs 1.0 RC4                                                 12 December 2010
================================================================================
 ! Base: Fixed some install issues when Simple Portal mod is installed

Pretty URLs 1.0 RC3                                                  28 November 2010
================================================================================
 ! Base: Fixed bug with handling single quotes in board names.
 
Pretty URLs 1.0 RC2                                                  16 August 2010
================================================================================
 % Base/reverter: Installs on SMF 2.0 RC3.
 ! Base: The relativising code needed some fixes. Sadly <base> can't be used. (PrettyUrls-Filters.php, QueryString.php)
 % Base/reverter: Installs on SMF 2.0 RC2. Thanks Yağız!
 + extras: Added SMF Tagging System filter.
 + extras: Added more filters for Downloads System, ezPortal, SMF Articles, SMF Classifieds, SMF Gallery, and SMF Store
 + extras: Added filter for Aeva Media. Thanks Nao for the code
 + Base: Added new setting to allowing skipping of actions for url rewriting.
 + extras: Added Google Tagged filter. Thanks to  Yagiz...
 
Pretty URLs 1.0RC                                                  19 June, 2009